all fixed and aligned, only login logic missing

--- a/src/dev/frontend/src/css/uxatAccess.css
+++ b/src/dev/frontend/src/css/uxatAccess.css
@@ -4,10 +4,10 @@
 .uxatBoxDiv {
     display: grid;
     grid-template-columns: 100%;
+    justify-items: center;
 }
 
 .uxatDiv {
-    justify-items: center;
     text-align: center;
     font-family: var(--font-family);
     color: var(--text-color);
@@ -15,7 +15,7 @@
 }
 
 .uxatBoxDiv {
-    justify-items: left;
+    text-align: left;
     margin: 20px 100px;
     padding: 30px;
     width: 420px;
